log
Fri Apr  8 15:35:51 UTC 2022: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|0
7f98f8b
Fri Apr  8 15:37:02 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bc1a141
Fri Apr  8 15:37:21 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
407e3b8
Fri Apr  8 16:10:47 UTC 2022: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:9: error: unused variable ‘valor’ [-Werror=unused-variable]
   Pair *valor = createPair(key,value);
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
8954fc2
Fri Apr  8 16:14:37 UTC 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
6579c47
Fri Apr  8 16:14:53 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
061e139
Sun Apr 10 21:09:48 UTC 2022: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
1ae21d1
